# Damascus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DamascusUnity.cpp  README.md  Readme.txt  cpp.hint  main.cpp
Application/Scenes/: DemoScene.cpp
Application/SpatialPartitioning/BSP/: BSP.hpp
Application/SpatialPartitioning/Octree/: Octree.hpp
Assets/: desktop.ini
Assets/Shaders/: Triangle.frag  Triangle.vert  basic.vert  basicFrag.spv  compile.bat  compile_linux.sh  compile_win.bat  debugColliderFrag.glsl  debugColliderFrag.spv  debugColliderVert.glsl  debugColliderVert.spv  debugDraw.frag  debugDraw.vert  debugDrawVert.spv  debugLineListFrag.glsl  debugLineListFrag.spv  debugLineListVert.glsl  debugLineStripFrag.glsl  debugLineStripFrag.spv  debugLineStripVert.glsl  debugLineStripVert.spv  debugNormalFrag.glsl  debugNormalFrag.spv  fillBuffers.frag  fillBuffers.vert  fillBuffersFrag.glsl  fillBuffersFrag.spv  fillBuffersVert.spv  forward.frag  forwardFrag.glsl  forwardFrag.spv  forwardVert.glsl  frag.spv  fsq.vert  fsqFrag.glsl  fsqFrag.spv  fsqVert.glsl  fsqVert.spv  phong.frag  vert.spv
Demos/: Collision.cpp  DemoScene.cpp  deferred.cpp  deferred.h
Framework/: CMakeLists.txt  RenderingDefines.hpp  RenderingStructures.hpp
Framework/Camera/: Camera.h
Framework/Collider/: Collider.cpp  Collider.h
Framework/ECS/: ECS.cpp  ECS.h
Framework/ECS/Components/: ComponentSystem.hpp
Framework/ECS/Components/Physics/: PhysicsComponent.h  PhysicsComponentSystem.h
Framework/ECS/Components/Render/: RenderComponent.h  RenderComponentSystem.h
Framework/ECS/Components/Transform/: TransformComponent.cpp  TransformComponent.h  TransformComponentSystem.h
Framework/InternalStructures/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DepthBuffer.cpp  DepthBuffer.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FrameBuffer.h  FrameBufferAttachment.cpp  FrameBufferAttachment.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  Model.cpp  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  RenderQueue.cpp  RenderQueue.h  RenderingDefines.hpp  RenderingStructures.hpp  Sampler.h  Semaphore.cpp  (+9 more)
Framework/Job/: Job.cpp  Job.h
Framework/Object/: Object.cpp  Object.h
Framework/Octree/: Octree.hpp
Framework/Overlay/: EditorBlock.h  EditorWindow.cpp  EditorWindow.h  Overlay.cpp  Overlay.h
Framework/Overlay/Blocks/: EntityEditorBlock.cpp  EntityEditorBlock.h  ObjectEditorBlock.cpp  ObjectEditorBlock.h  StatsEditorBlock.cpp  StatsEditorBlock.h
Framework/Primitives/: Primitives.cpp  Primitives.h  Primitives.hpp
Framework/Renderer/: Renderer.cpp  Renderer.h
Framework/RenderingContext/: RenderingContext.cpp  RenderingContext.h  RenderingContext_Impl.h
Framework/Sorting/: ElementSortKeys.h  RenderSortKey.cpp  RenderSortKey.h
Framework/Structures/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  DepthBuffer.cpp  DepthBuffer.h  Descriptors.cpp  Device.cpp  Device.h  Fence.cpp  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageView.cpp  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.h  RenderPass.cpp  RenderPass.h  RenderingDefines.hpp  RenderingStructures.hpp  Semaphore.cpp  Semaphore.h  ShaderModule.h  Swapchain.cpp  Swapchain.h  Vertex.cpp  Vertex.h
Framework/Window/: Window.cpp  Window.h
Include/: Damascus.hpp
Shaders/: Triangle.frag  Triangle.vert  vert.spv
Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h  damascus_pch.hpp  pch.cpp  pch.hpp
